--- a/Visualizer/app/src/main/res/values/strings.xml
+++ b/Visualizer/app/src/main/res/values/strings.xml
@@ -3,6 +3,13 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="pref_show_bass_label">Show Bass</string>
+
+    <string name="pref_show_bass_key" translatable="false">show_bass</string>
+
+    <string name="pref_show_true">Shown</string>
+    <string name="pref_show_false">Hidden</string>
+
     <string name="pref_color_red_value" translatable="false">red</string>
 
     <string name="pref_color_blue_value" translatable="false">blue</string>
