--- a/Visualizer/app/src/main/res/values/strings.xml
+++ b/Visualizer/app/src/main/res/values/strings.xml
@@ -15,9 +15,17 @@
     <string name="pref_show_true">Shown</string>
     <string name="pref_show_false">Hidden</string>
 
+    <string name="pref_color_label">Shape Color</string>
+    <string name="pref_color_label_red">Red</string>
+    <string name="pref_color_label_green">Green</string>
+    <string name="pref_color_label_blue">Blue</string>
+
+    <string name="pref_color_key" translatable="false">color</string>
+
     <string name="pref_color_red_value" translatable="false">red</string>
+
+    <string name="pref_color_green_value" translatable="false">green</string>
 
     <string name="pref_color_blue_value" translatable="false">blue</string>
 
-    <string name="pref_color_green_value" translatable="false">green</string>
 </resources>
