--- a/Visualizer/app/src/main/res/values/strings.xml
+++ b/Visualizer/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="pref_show_true">Shown</string>
     <string name="pref_show_false">Hidden</string>
 
+    <string name="pref_size_label">Size Multiplier</string>
+    <string name="pref_size_key" translatable="false">size</string>
+    <string name="pref_size_default" translatable="false">1</string>
+
     <string name="pref_color_label">Shape Color</string>
     <string name="pref_color_label_red">Red</string>
     <string name="pref_color_label_green">Green</string>
